--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
       </section>
 
       <!-- benefits -->
-      <!-- <section class="section benefits">
+      <section class="section benefits">
         <div class="container">
-          <h2 class="section__title visually-hidden">Особливості</h2>
+          <h2 class="visually-hidden">Особливості</h2>
           <ul class="benefits__list">
             <li class="benefits__item">
               <div class="benefits__pic">
@@ -137,11 +137,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- what we do -->
 
-      <!-- <section class="section works">
+      <section class="section works">
         <div class="container">
           <h2 class="section__title works__title">Чим ми займаємося</h2>
           <ul class="works__list">
@@ -183,11 +183,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- our team -->
 
-      <!-- <section class="section our-team">
+      <section class="section our-team">
         <div class="container">
           <h2 class="section__title our-team__title">Наша команда</h2>
           <ul class="members">
@@ -422,10 +422,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- clients -->
-      <!-- <section class="clients section">
+      <section class="clients section">
         <div class="container">
           <h2 class="section__title clients-title">Постійні клієнти</h2>
           <ul class="clients__list">
@@ -497,18 +497,17 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer__container">
         <div class="footer-nav">
           <a href="./index.html" lang="en" class="logo footer__logo"
             ><span class="logo__text--accent">Web</span>Studio</a
           >
           <address class="footer-address">
-            
             <ul class="footer-address__list">
               <li class="footer-address__item">
                 <a
@@ -607,7 +606,7 @@
           </div>
         </form>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- modal -->
     <div class="backdrop is-hidden" data-modal>
