--- a/index.html
+++ b/index.html
@@ -22,12 +22,28 @@
 
   <body>
     <!-- header -->
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header__container">
         <nav class="navigation">
           <a class="logo" href="./index.html" lang="en"
             ><span class="logo__text--accent">Web</span>Studio</a
           >
+          <button
+            type="button"
+            class="nav-button"
+            aria-label="Перемикач мобільного меню"
+          >
+            <svg width="40" height="40">
+              <use
+                class="icon-menu"
+                href="./images/icons.svg#icon-nav-close"
+              ></use>
+              <use
+                class="icon-menu"
+                href="./images/icons.svg#icon-nav-menu"
+              ></use>
+            </svg>
+          </button>
 
           <ul class="header-nav">
             <li class="header-nav__item">
@@ -69,7 +85,7 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
 
     <!-- main content -->
     <main>
@@ -617,8 +633,6 @@
           </svg>
         </button>
         <p class="modal__title">Залиште свої дані, ми вам передзвонимо</p>
-
-        <!-- modal-form -->
 
         <form class="modal-form">
           <div class="modal-field">
