--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
               <div class="works__thumb">
                 <img
                   class="works__pic"
-                  src="./images/img-1.jpg"
+                  srcset="./images/works.jpg 1x, ./images/works@2x.jpg 2x"
+                  src="./images/works.jpg"
                   alt="Десктопні додатки"
                   width="370"
                   height="294"
@@ -263,7 +264,8 @@
               <div class="works__thumb">
                 <img
                   class="works__pic"
-                  src="./images/img-2.jpg"
+                  srcset="./images/works_02.jpg 1x, ./images/works_02@2x.jpg 2x"
+                  src="./images/works.jpg"
                   alt="Мобільні додатки"
                   width="370"
                   height="294"
@@ -275,7 +277,8 @@
               <div class="works__thumb">
                 <img
                   class="works__pic"
-                  src="./images/img-3.jpg"
+                  srcset="./images/works_03.jpg 1x, ./images/works_03@2x.jpg 2x"
+                  src="./images/works.jpg"
                   alt="Дизайнерські рішення"
                   width="370"
                   height="294"
@@ -378,25 +381,25 @@
             <li class="members__item">
               <picture>
                 <source
+                  media="(min-width: 1200px)"
                   srcset="
                     ./images/frontend-developer-desk.jpg    1x,
                     ./images/frontend-developer-desk-2x.jpg 2x
                   "
-                  media="(min-width: 1200px)"
                 />
                 <source
+                  media="(min-width: 768px)"
                   srcset="
                     ./images/frontend-developer-tab.jpg    1x,
                     ./images/frontend-developer-tab-2x.jpg 2x
                   "
-                  media="(min-width: 768px)"
                 />
                 <source
+                  media="(max-width: 767px)"
                   srcset="
                     ./images/frontend-developer-mob.jpg    1x,
                     ./images/frontend-developer-mob-2x.jpg 2x
                   "
-                  media="(max-width: 767px)"
                 />
                 <img
                   class="members__pic"
@@ -879,8 +882,8 @@
               class="visually-hidden regular-checkbox"
               required
             />
-            <label for="privacy-policy" class="checkbox__label"
-              ><span class="checkbox">
+            <label for="privacy-policy" class="checkbox__label">
+              <span class="checkbox">
                 <svg class="checkbox__icon">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
@@ -901,6 +904,6 @@
     </div>
 
     <script src="./js/modal.js"></script>
-    <script defer src="js/menu.js"></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
