--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,13 @@
     <header class="header">
       <div class="container header__container">
         <nav class="navigation">
-          <a class="logo" href="./index.html" lang="en"
+          <a class="logo logo__header" href="./index.html" lang="en"
             ><span class="logo__text--accent">Web</span>Studio</a
           >
 
           <button
             type="button"
-            class="mob-menu__btn--open"
+            class="mob-menu__btn mob-menu__btn--open"
             aria-label="Перемикач мобільного меню"
             data-menu-open
           >
@@ -83,10 +83,14 @@
 
       <!-- mobile menu -->
       <div class="mob-menu visually-hidden" data-menu>
-        <button type="button" class="mob-menu__btn--close" data-menu-close>
+        <button
+          type="button"
+          class="mob-menu__btn mob-menu__btn--close"
+          data-menu-close
+        >
           <svg width="40" height="40">
             <use
-              class="icon-close"
+              class="icon-menu"
               href="./images/icons.svg#icon-nav-close"
             ></use>
           </svg>
@@ -94,14 +98,12 @@
         <div>
           <ul class="mob-menu__nav">
             <li class="mob-menu__item">
-              <a
-                href="./index.html"
-                class="mob-menu__link mob-menu__link--current link"
-                >Студія</a
-              >
+              <a href="./index.html" class="mob-menu__link link">Студія</a>
             </li>
             <li class="mob-menu__item">
-              <a href="./portfolio.html" class="link mob-menu__link"
+              <a
+                href="./portfolio.html"
+                class="link mob-menu__link mob-menu__link--current"
                 >Портфоліо</a
               >
             </li>
@@ -207,22 +209,39 @@
             <li class="cards__item">
               <a class="link cards__link" href=""
                 ><div class="cards__thumb">
-                  <img
-                    class="cards__pic"
-                    srcset="
-                      ./images/portfolio-1-354.jpg 354w,
-                      ./images/portfolio-1-370.jpg 370w,
-                      ./images/portfolio-1-450.jpg 450w,
-                      ./images/portfolio-1-708.jpg 708w,
-                      ./images/portfolio-1-740.jpg 740w,
-                      ./images/portfolio-1-900.jpg 900w
-                    "
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 480px) 450px, 100vw"
-                    src="./images/portfolio-1-450.jpg"
-                    alt="Веб-сайт"
-                    width="450"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio-1-desk.jpg    1x,
+                        ./images/portfolio-1-desk@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio-1-tab.jpg    1x,
+                        ./images/portfolio-1-tab@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/portfolio-1-mob.jpg    1x,
+                        ./images/portfolio-1-mob@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="cards__pic"
+                      src="./images/portfolio-1-mob.jpg"
+                      alt="Веб-сайт"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
 
                   <div class="cards__overlay">
                     <p class="cards__overlay-content">
